# greenhouse_devices

./: .env.default  .gitignore  CMakeLists.txt  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yaml  init-db.sql  mosquitto.conf  sdkconfig.ci  sdkconfig.defaults  telegraf.conf
devices/: CMakeLists.txt
devices/climate_monitor/: climate_monitor.c  climate_monitor.h
grafana-provisioning/alerting/: alert-rules.yaml  contact-points.yaml  notification-policies.yaml
grafana-provisioning/dashboards/: dashboard-provider.yaml  grafana-dashboard.json
grafana-provisioning/datasources/: grafana-datasource.yaml
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml  mqtt_client_manager.c  mqtt_client_manager.h
scripts/: build_flash_monitor  calibrate_soil_sensor.sh  generate_env_header.py
visualization/: README.md  RESTRUCTURING_NOTES.md  __init__.py  data_generator.py  db_connector.py  greenhouse_mapper.py  plant_mapper.py  requirements.txt  setup_check.py  setup_database.py  statistical_plots.py
visualization/archive/: GETTING_STARTED.md  MICROCLIMATE_LAYOUT.md  OPTIMIZED_LAYOUT.md  PLANT_BIOMASS_MAPPING.md  POT_SIZE_UPDATE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README_old.md  SENSOR_DISTRIBUTION_FIX.md  UPDATE_16_PLANTS.md  example_plant_biomass.py  example_simple.py  greenhouse_visualization_demo.ipynb
